# FinRack

./: .env  .env.example  .gitignore  API_REF.md  NEXT_STEPS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE4_IMPLEMENTATION.md  README.md  docker-compose.yml  init-db.sql
FinRack/: package-lock.json  package.json  tailwind.config.js
FinRack/backen/: package-lock.json  package.json
FinRack/public/: index.html
FinRack/src/: App.jsx  api.js  index.css  index.js  tailwind.css
FinRack/src/components/: ChatBot.jsx
FinRack/src/models/: User.js
FinRack/src/pages/: ContactUs.jsx  Dashboard.jsx  Feedback.jsx  LandingPage.jsx  Login.jsx  Register.jsx
FinRack/src/routes/: auth.js
backend/: Dockerfile  alembic.ini  init-db.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250103_0142_001_initial_schema.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/app/agents/: base.py  budget_guardian.py  communication.py  finance_concierge.py  fraud_sentinel.py  investment_advisor.py  memory.py  orchestrator.py
backend/app/api/: accounts.py  agents.py  analytics.py  auth.py  budgets.py  goals.py  ocr.py  subscriptions.py  transactions.py  websocket.py
backend/app/core/: __init__.py  deps.py  security.py
backend/app/models/: __init__.py  accounts.py  agents.py  budgets.py  goals.py  transactions.py  users.py
backend/app/schemas/: __init__.py  accounts.py  auth.py  budgets.py  goals.py  transactions.py  users.py
backend/app/services/: analytics_service.py  categorization.py  llm_service.py  notification.py  ocr_service.py  plaid_service.py  subscriptions_service.py  transaction_sync.py
backend/tests/: test_health.py  test_receipt_parse.py
frontend/: jest.config.js  next.config.js  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: home.spec.ts
frontend/src/__tests__/: home.test.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/forgot-password/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/ai/: page.tsx
frontend/src/app/(dashboard)/analytics/: page.tsx
frontend/src/app/(dashboard)/budgets/: page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/goals/: page.tsx
frontend/src/app/(dashboard)/receipts/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/app/(dashboard)/subscriptions/: page.tsx
frontend/src/app/(dashboard)/transactions/: page.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/types/: index.ts
