[tool.poetry]
name = "finrack-backend"
version = "1.0.0"
description = "FinRack Backend - AI-Powered Financial Platform"
authors = ["Om7035 <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"

# Core Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.12"

# Database
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
pgvector = "^0.3.5"

# Redis & Caching
redis = "^5.2.0"
hiredis = "^3.0.0"

# Task Queue
celery = "^5.4.0"
flower = "^2.0.1"

# AI/ML Frameworks
langchain = "^0.3.7"
langchain-community = "^0.3.7"
langchain-core = "^0.3.15"
langgraph = "^0.2.45"
crewai = "^0.86.0"
autogen-agentchat = "^0.4.0"

# LLM Providers
openai = "^1.54.5"
anthropic = "^0.39.0"
groq = "^0.11.0"
ollama = "^0.4.4"

# ML/AI Libraries
scikit-learn = "^1.5.2"
xgboost = "^2.1.2"
prophet = "^1.1.6"
sentence-transformers = "^3.3.1"
spacy = "^3.8.2"
numpy = "^2.1.3"
pandas = "^2.2.3"

# Authentication & Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.1"
pyotp = "^2.9.0"

# Third-party Integrations
plaid-python = "^28.0.0"
stripe = "^11.2.0"
twilio = "^9.3.7"
sendgrid = "^6.11.0"
boto3 = "^1.35.63"

# HTTP Client
httpx = "^0.27.2"
aiohttp = "^3.11.7"

# Data Validation & Serialization
email-validator = "^2.2.0"
python-dateutil = "^2.9.0"

# Utilities
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
click = "^8.1.7"

# Monitoring & Logging
sentry-sdk = {extras = ["fastapi"], version = "^2.18.0"}

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.2"

# Code Quality
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pylint = "^3.3.1"

# Type Stubs
types-redis = "^4.6.0.20241004"
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240819"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
