[tool.poetry]
name = "finrack-backend"
version = "0.1.0"
description = "FinRack AI-Powered Financial Platform Backend"
authors = ["Om <om@finrack.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
redis = "^5.0.1"
celery = "^5.3.6"
flower = "^2.0.1"
langchain = "^0.1.0"
langchain-community = "^0.0.13"
langgraph = "^0.0.20"
crewai = "^0.1.0"
plaid-python = "^18.0.0"
stripe = "^7.11.0"
twilio = "^8.11.1"
sendgrid = "^6.11.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.3"
prophet = "^1.1.5"
sentence-transformers = "^2.3.1"
spacy = "^3.7.2"
pgvector = "^0.2.4"
boto3 = "^1.34.34"
pillow = "^10.2.0"
pytesseract = "^0.3.10"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
aiofiles = "^23.2.1"
pyotp = "^2.9.0"
qrcode = "^7.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
